Add features for review comments